assets/sass/custom/theme/_global.scss
/* Global
================================================ */

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Montserrat', sans-serif;
  font-size: 62.5%;
  font-weight: normal;
  line-height: 1.5;
  color: black;
  background-color: $dark;

  ::selection {
    background: $turquoise;
    color: white;
  }

  ::-moz-selection {
    background: $turquoise;
    color: white;
  }
}

/* Let's get this party started */
::-webkit-scrollbar {
    width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: $turquoise;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}

::-webkit-scrollbar-thumb:window-inactive {
	background: rgba(255,0,0,0.4);
}

body {
  overflow-x: hidden;
}

a:focus {
  outline:0 !important;
}

#wrapper {
  position: relative;
  height: 100%;
}

.sst-status-wrapper {
  border: 2px solid #6441A4;
}

.sst-twitch-logo-wrapper {
  border: 2px solid #6441A4;
}

.sst-status-text-live, .sst-status-text-offline {
  @extend %texte;
  font-size: 1.5rem;
}

